<resources>
    <string name="app_name">Puzzle</string>
    <string name="never">Never</string>
    <string name="recent">Recent</string>
    <string name="recently">RECENTLY</string>
    <string name="my_puzzles">MY PUZZLES</string>
    <string name="categories">CATEGORIES</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="play_now">Play now</string>
    <string name="reshot">Reshot</string>
    <string name="more_count">+%d</string>
    <string name="delete">Delete</string>
    <string name="msg_delete_challenge">Do you want to delete this puzzle challenge?</string>
    <string name="delete_puzzles">Delete puzzles</string>
</resources>
