<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_gray_round_radius_16"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/delete_puzzles"
        android:textColor="@color/purple"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/msg_delete_challenge"
        android:textColor="@color/colorTextDark"
        android:textSize="@dimen/sp_14"
        tools:text="Do you want to delete this puzzle challenge?" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_200"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        app:cardCornerRadius="@dimen/dp_16"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageChallenge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/gray" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2.1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@android:string/cancel"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textDelete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp_14" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
